didn't update claims last time, this time should work

--- a/README
+++ b/README
@@ -3,3 +3,9 @@
 All programs are NOT original, as is tranlation into R form from Matlab/Octave form of Coursera machine learning course material by Andrew Ng, Stanford University.
 
 In case of application of these programs, give all credit to Andrew!
+
+No warranty of correctness!
+
+Programs are still under debugging and optimisation!
+
+Training dataset and test dataset can be download from kaggle.com.
